add title to area

--- a/Inserting_images/Uzhhorod/index.html
+++ b/Inserting_images/Uzhhorod/index.html
@@ -20,43 +20,49 @@
           shape="poly"
           coords="3,694,950,617,1159,630,1183,599,1260,593,1254,633,1346,631,1336,591,1440,588,1437,651,498,996,3,996"
           href="https://uk.wikipedia.org/wiki/%D0%A3%D0%B6_(%D0%BF%D1%80%D0%B8%D1%82%D0%BE%D0%BA%D0%B0_%D0%9B%D0%B0%D0%B1%D0%BE%D1%80%D1%86%D1%8E)"
-          alt="річка_Уж"
+          alt="Річка Уж"
           target="_blank"
+          title="Річка Уж"
         />
         <area
           shape="poly"
           coords="902,536,1495,541,1495,641,1448,637,1445,580,1319,581,1319,628,1263,630,1262,577,1161,579,1157,622,961,606"
           href="https://uzhgorod-online.com/places/sights/pishohidnyj-mist/"
-          alt="пішохідний_міст_Ужгород"
+          alt="Пішохідний міст, Ужгород"
           target="_blank"
+          title="Пішохідний міст, Ужгород"
         />
         <area
           shape="circle"
           coords="400,407,112"
           href="https://uk.wikipedia.org/wiki/%D0%AF%D1%81%D0%B5%D0%BD_%D0%9C%D0%B0%D1%81%D0%B0%D1%80%D0%B8%D0%BA%D0%B0"
-          alt="Ясен_Масарика_Ужгород"
+          alt="Ясен Масарика, Ужгород"
           target="_blank"
+          title="Ясен Масарика"
         />
         <area
           shape="circle"
           coords="701,433,37"
           href="http://cathedral.uz.ua/"
-          alt="Ужгородський_греко-католицький_Катедральний_Собор"
+          alt="Ужгородський греко-католицький Катедральний Собор"
           target="_blank"
+          title="Ужгородський греко-католицький Катедральний Собор"
         />
         <area
           shape="rect"
           coords="657,525,857,568"
           href="http://itinery.com.ua/object/view/teatralnaya-ploschad-uzhgorod"
-          alt="Театральна_(Євгенія_Фенцика)_площа"
+          alt="Театральна (Євгенія_Фенцика) площа"
           target="_blank"
+          title="Театральна (Євгенія_Фенцика) площа"
         />
         <area
           shape="rect"
           coords="1,550,630,592"
           href="https://uzhgorod-online.com/places/sights/naberezhna-nezalezhnosti/"
-          alt="Набережна_Незалежності"
+          alt="Набережна Незалежності"
           target="_blank"
+          title="Набережна Незалежності"
         />
       </map>
     </div>
