--- a/Inserting_images_video/house/index.html
+++ b/Inserting_images_video/house/index.html
@@ -18,6 +18,7 @@
           href="https://uk.wikipedia.org/wiki/%D0%9F%D0%BE%D0%BA%D1%80%D1%96%D0%B2%D0%BB%D1%8F"
           alt="Криша"
           target="_blank"
+          title="Криша"
         />
         <area
           shape="rect"
@@ -25,6 +26,7 @@
           href="http://www.intergarant.com.ua/sliding-systems/rozsuvni-vikna/"
           alt="Двері"
           target="_blank"
+          title="Двері"
         />
         <area
           shape="poly"
@@ -32,6 +34,7 @@
           href="https://www.karpaty.info/ua/uk/zk/kh/synevyrska.polyana/sights/ozero.synevyr/"
           alt="Озеро"
           target="_blank"
+          title="Озеро"
         />
         <area
           shape="poly"
@@ -39,6 +42,7 @@
           href="https://uk.wikipedia.org/wiki/%D0%A5%D0%B2%D0%BE%D0%B9%D0%BD%D0%B8%D0%B9_%D0%BB%D1%96%D1%81"
           alt="Ліс"
           target="_blank"
+          title="Ліс"
         />
         <area
           shape="circle"
@@ -46,6 +50,7 @@
           href="https://rozetka.com.ua/312720613/p312720613/?gclid=CjwKCAjw6fyXBhBgEiwAhhiZsr_85YwDsftN_KjDFKfQoFJaabPsLUpvYpfLsy8hXjxQ44UeEROmDhoCOo4QAvD_BwE"
           alt="Чаша для вогню"
           target="_blank"
+          title="Чаша для вогню"
         />
         <area
           shape="circle"
@@ -53,6 +58,7 @@
           href="https://uaeu.top/budivnytstvo-i-remont/derev-yana-drabina-sekreti-vigotovlennya-nad-jnoji-konstrukts-ji-svojimi-rukami.html"
           alt="Вироби з дерева"
           target="_blank"
+          title="Вироби з дерева"
         />
       </map>
     </div>
